@@ -406,6 +406,8 @@ To analyse you can run the circuit in single gate step mode.</string>
     <string name="err_splitterAllowsOnlyOneHighZInput">A splitter which allows high z inputs can only have one input!</string>
     <string name="err_couldNotCreateFolder_N0">Could not create folder '{0}'!</string>
     <string name="err_switchHasNoNet">It is not allowed to connect only inputs to a switch.</string>
+    <string name="err_file_N0_ExistsTwiceBelow_N1">The file {0} exists multiple times below {1}.</string>
+    <string name="err_couldNotFindIncludedFile_N0">Could not find the file {0}.</string>
 
     <string name="key_AddrBits">Address Bits</string>
     <string name="key_AddrBits_tt">Number of address bits used.</string>
